[gd_scene load_steps=8 format=3 uid="uid://d12r8d5c8hufq"]

[ext_resource type="Script" path="res://Scenes/pause.gd" id="1_lakyi"]
[ext_resource type="Shader" path="res://Scenes/pause.gdshader" id="2_2y15g"]
[ext_resource type="PackedScene" uid="uid://c5ea5yed0s5yf" path="res://Scenes/settings.tscn" id="2_ko6lo"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_465cl"]
shader = ExtResource("2_2y15g")
shader_parameter/lod = 0.0

[sub_resource type="Animation" id="Animation_c7m72"]
resource_name = "blur"
length = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("ColorRect:material:shader_parameter/lod")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [0.0, 0.822]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("PanelContainer:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_kpejs"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("ColorRect:material:shader_parameter/lod")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("PanelContainer:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_4n86p"]
_data = {
"RESET": SubResource("Animation_kpejs"),
"blur": SubResource("Animation_c7m72")
}

[node name="Pause" type="Control"]
process_mode = 3
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_lakyi")

[node name="Settings" parent="." instance=ExtResource("2_ko6lo")]
layout_mode = 1

[node name="ColorRect" type="ColorRect" parent="."]
material = SubResource("ShaderMaterial_465cl")
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="PanelContainer" type="PanelContainer" parent="."]
modulate = Color(1, 1, 1, 0)
layout_mode = 1
anchors_preset = 9
anchor_bottom = 1.0
offset_left = 56.0
offset_right = 445.0
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer"]
custom_minimum_size = Vector2(150, 0)
layout_mode = 2
size_flags_vertical = 4
size_flags_stretch_ratio = 0.0
theme_override_constants/separation = 20

[node name="Resume" type="Button" parent="PanelContainer/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_pressed_color = Color(0.282353, 0.282353, 0.282353, 1)
theme_override_colors/font_hover_color = Color(1, 0, 0, 1)
theme_override_constants/outline_size = 0
text = "Resume"
flat = true
icon_alignment = 1

[node name="Restart" type="Button" parent="PanelContainer/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_pressed_color = Color(0.282353, 0.282353, 0.282353, 1)
theme_override_colors/font_hover_color = Color(1, 0, 0, 1)
text = "Restart"
flat = true
icon_alignment = 1

[node name="Settings" type="Button" parent="PanelContainer/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_pressed_color = Color(0.282353, 0.282353, 0.282353, 1)
theme_override_colors/font_hover_color = Color(1, 0, 0, 1)
text = "Settings"
flat = true
icon_alignment = 1

[node name="Exit_To_Menu" type="Button" parent="PanelContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 5)
layout_mode = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_pressed_color = Color(0.282353, 0.282353, 0.282353, 1)
theme_override_colors/font_hover_color = Color(1, 0, 0, 1)
text = "Exit To Menu"
flat = true
icon_alignment = 1

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_4n86p")
}

[connection signal="pressed" from="PanelContainer/VBoxContainer/Resume" to="." method="_on_resume_pressed"]
[connection signal="pressed" from="PanelContainer/VBoxContainer/Restart" to="." method="_on_restart_pressed"]
[connection signal="pressed" from="PanelContainer/VBoxContainer/Settings" to="." method="_on_settings_pressed"]
[connection signal="pressed" from="PanelContainer/VBoxContainer/Exit_To_Menu" to="." method="_on_exit_to_menu_pressed"]
